# StoneReader

./: CMakeLists.txt  README.md
src/: Controller.cpp  Controller.h  DialogFileOpen.cpp  DialogFileOpen.h  HistogramDialogWindow.cpp  HistogramDialogWindow.h  HistogramWindow.cpp  HistogramWindow.h  MainApp.cpp  MainApp.h  MainWindow.cpp  MainWindow.h  Picture.cpp  Picture.h  SRefBuilder.h  main.cpp
